default/objects/E2E_PayU_Settings__c/E2E_PayU_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>E2E PayU Settings</label>
</CustomObject>