default/objects/E2E_PayU_Settings__c/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <label>Client Secret</label>
    <length>50</length>
    <type>Text</type>
</CustomField>