default/objects/E2E_PayU_Settings__c/fields/Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Company_Id__c</fullName>
    <label>Company Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>