default/objects/E2E_PayU_Settings__c/fields/notifyUrl__c.field-meta.xml
<CustomField>
    <fullName>notifyUrl__c</fullName>
    <label>notifyUrl</label>
    <length>100</length>
    <type>Text</type>
</CustomField>