default/objects/E2E_PayU_Settings__c/fields/Pos_Id__c.field-meta.xml
<CustomField>
    <fullName>Pos_Id__c</fullName>
    <label>Pos Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>