default/objects/E2E_PayU_Settings__c/fields/Second_key_MD5__c.field-meta.xml
<CustomField>
    <fullName>Second_key_MD5__c</fullName>
    <label>Second key (MD5)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>