default/objects/E2E_PayU_Settings__c/fields/Shop_Id__c.field-meta.xml
<CustomField>
    <fullName>Shop_Id__c</fullName>
    <label>Shop Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>